# uclv_dowloader

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
cli/: __init__.py  interface.py
core/: __init__.py  downloader.py  subtitle_search.py  utils.py
core/downloaders/: __init__.py  batch_downloader.py  file_downloader.py  main_downloader.py  progress_tracker.py
core/searchers/: __init__.py  base_searcher.py  opensubtitles_searcher.py  podnapisi_searcher.py  simple_searcher.py  subdivx_searcher.py
gui/: README.md  REFACTORING.md  __init__.py  interface.py
gui/components/: __init__.py  download_controls.py  file_list.py  file_types.py  header.py  progress.py  styles.py  subtitle_search.py  url_input.py
gui/components/styling/: __init__.py  colors.py  fonts.py  spacing.py  styles.py  theme.py
gui/components/widgets/: __init__.py  file_list_model.py  file_list_view.py  subtitle_search_manager.py  subtitle_search_widget.py
gui/managers/: __init__.py  download_manager.py  event_manager.py  scroll_manager.py  ui_state_manager.py
release/: README.md  build.py  build_and_release.sh  create_release.py
release/builders/: __init__.py  build_cleaner.py  build_tester.py  executable_builder.py  main_builder.py  spec_generator.py
